<resources>
    <string name="app_name">TelaLoginConstraint</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login">Login\n</string>
    <string name="ainda_nao_cadastrado">Ainda não cadastrado\n</string>
    <string name="cadastre_se">Cadastra-se\n</string>
    <string name="esqueceu_a_sua_senha">Esqueceu a sua senha?\n</string>
    <string name="BemVindo">Bem vindo\t</string>


</resources>